--- a/anika/index.html
+++ b/anika/index.html
@@ -8,7 +8,7 @@
         content="I am a third year undergraduate student at UCLA pursuing a degree in Cognitive Science with a Specialization in Computing." />
     <meta name="keywords" content="resume, personal biography" />
     <meta name="author" content="Anika Vaishampayan" />
-    <meta name="viewport" content="width=device-width, target-densityDpi=device-dpi;" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0;" />
     <link rel="stylesheet" href="style.css"/>
 </head>
 
